--- a/css/main.css
+++ b/css/main.css
@@ -1096,9 +1096,8 @@ textarea {
 
 .overlay {
   width: 450px;
-  position: absolute;
+  position: relative;
   height: 100%;
-  height: 357px;
   width: 100%;
   top: 0;
   overflow: hidden;
