--- a/sass/components/portfolio/_overlay.scss
+++ b/sass/components/portfolio/_overlay.scss
@@ -1,15 +1,16 @@
 .overlay {
   width: 450px;
-  position: absolute;
+  position: relative;
 
   height: 100%;
-  height: 357px;
+  // height: 294px;
   width: 100%;
   top: 0;
 
   overflow: hidden;
   @media screen and (min-width: 768px) {
     width: 354px;
+    // height: 224px;
   }
   @media screen and (min-width: 1200px) {
     width: 370px;
