--- a/css/main.css
+++ b/css/main.css
@@ -574,7 +574,6 @@ header .container {
 }
 
 .clients__list {
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
@@ -1162,8 +1161,14 @@ textarea {
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 32px;
+  margin-bottom: 40px;
   padding-right: 103px;
+}
+
+@media screen and (min-width: 768px) {
+  .button-set {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1171,6 +1176,7 @@ textarea {
     flex-wrap: nowrap;
     padding-right: 0;
     justify-content: center;
+    margin-bottom: 50px;
   }
 }
 
@@ -1228,7 +1234,6 @@ textarea {
 .portfolio__list {
   display: flex;
   flex-direction: column;
-  margin-top: -30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1239,17 +1244,15 @@ textarea {
     margin: 0;
     list-style: none;
     margin-left: -30px;
+    margin-top: -30px;
   }
-}
-
-.project {
-  margin-top: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .project {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
+    margin-top: 30px;
   }
 }
 
@@ -1337,16 +1340,25 @@ textarea {
 }
 
 .footer__contacts {
-  text-align: center;
   font-style: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__contacts:not(:last-child) {
   margin-bottom: 9px;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer__contacts {
+    display: block;
+  }
+}
+
 .footer__address {
   margin-bottom: 60px;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
