--- a/sass/components/page-footer/_footer.scss
+++ b/sass/components/page-footer/_footer.scss
@@ -63,16 +63,22 @@
 }
 
 .footer__contacts {
-  text-align: center;
   font-style: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &:not(:last-child) {
     margin-bottom: 9px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: block;
   }
 }
 
 .footer__address {
   margin-bottom: 60px;
+  text-align: center;
 
   @media screen and (min-width: 768px) {
     margin-bottom: 0;
