--- a/sass/components/portfolio/_portfolio.scss
+++ b/sass/components/portfolio/_portfolio.scss
@@ -7,13 +7,18 @@
   align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 32px;
+  margin-bottom: 40px;
   padding-right: 103px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
 
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
     padding-right: 0;
     justify-content: center;
+    margin-bottom: 50px;
   }
 }
 
@@ -79,7 +84,7 @@
 .portfolio__list {
   display: flex;
   flex-direction: column;
-  margin-top: -30px;
+  // margin-top: -30px;
 
   @media screen and (min-width: 768px) {
     flex-wrap: wrap;
@@ -90,16 +95,16 @@
     list-style: none;
 
     margin-left: -30px;
+    margin-top: -30px;
   }
   @media screen and (min-width: 1200px) {
   }
 }
 .project {
-  margin-top: 30px;
-
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
+    margin-top: 30px;
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc(100% / 3 - 60px);
